# GraphCall

./: .hlint.yaml  CHANGELOG.md  GraphCall.cabal  input_body.txt
app/: Main.hs
src/: MyParser.hs
