cabal-version:      2.4
name:               GraphCall
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: Build graph call for C# function.

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Alain Dutech
maintainer:         snowgoon88@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  exposed-modules:      MyParser
  -- other-modules:
  -- other-extensions:
  build-depends:        base >=4.14.3.0 
                      , parsec
                      , mtl
  hs-source-dirs:       src
  default-language:     Haskell2010
                    
executable GraphCall
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    MyParser

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
                    , parsec
                    , mtl
    hs-source-dirs:   app
    default-language: Haskell2010
